--- a/Module_1/Lesson_7/Bai_tap_lesson_7/Baitap_javascript_LaiNganHang.html
+++ b/Module_1/Lesson_7/Bai_tap_lesson_7/Baitap_javascript_LaiNganHang.html
@@ -8,7 +8,7 @@
 Số tiền gửi
 <input type="number" id="money" value="0">
 Số tháng gửi
-<input type="number" id="mounth" value="0">
+<input type="number" id="mounth" value="0">git
 Kết quả
 <button onclick="getMoney()">Kết Quả</button>
 <p id="result"></p>
