--- a/Module_1/Lesson_7/Bai_tap_lesson_7/Baitap_Ung_dung_chuyen_doi_tien.html
+++ b/Module_1/Lesson_7/Bai_tap_lesson_7/Baitap_Ung_dung_chuyen_doi_tien.html
@@ -19,14 +19,14 @@
             </td>
             <td>
                 <select id="fromCurrency">
-                    <option value="VND">VND</option>
-                    <option value="USD">USD</option>
+                    <option value="25600">VND</option>
+                    <option value="1">USD</option>
                 </select>
             </td>
             <td>
                 <select id="toCurrency">
-                    <option value="VND">VND</option>
-                    <option value="USD">USD</option>
+                    <option value="25600">VND</option>
+                    <option value="1">USD</option>
                 </select>
             </td>
             <td>
@@ -41,17 +41,19 @@
 <script>
     function getMoney(){
         let amount = +document.getElementById("amount").value;
-        let fromCurrency = document.getElementById("fromCurrency").value;
-        let toCurrency = document.getElementById("toCurrency").value;
-        let result=0;
+        let fromCurrency = +document.getElementById("fromCurrency").value;
+        let toCurrency = +document.getElementById("toCurrency").value;
+        let result= (amount / fromCurrency) * toCurrency;
 
-        if(fromCurrency == "VND" && toCurrency == "USD"){
-            result = "result" + " " + (amount / 25600) + "USD";
-        }
-        else if(fromCurrency == "USD" && toCurrency == "VND"){
-            result = "result " + " " + (amount * 25600) + "VND";
-        }
-        document.getElementById("result").innerHTML = result;
+        document.getElementById("result").innerHTML ="KQ" + result;
+
+        // if(fromCurrency == "VND" && toCurrency == "USD"){
+        //     result = "result" + " " + (amount / 25600) + "USD";
+        // }
+        // else if(fromCurrency == "USD" && toCurrency == "VND"){
+        //     result = "result " + " " + (amount * 25600) + "VND";
+        // }
+        // document.getElementById("result").innerHTML = result;
     }
 </script>
 </body>
