--- a/Module_1/Lesson_9/Bai_tap_lesson_9/Baitap_Tinh_so_ngay.html
+++ b/Module_1/Lesson_9/Bai_tap_lesson_9/Baitap_Tinh_so_ngay.html
@@ -13,16 +13,41 @@
            <input type="number" value="0" id="month">
            </td>
            <td>
-               <button onclick="checkMonth()">Check</button>
+               <button type="button" onclick="checkMonth() ">Check</button>
            </td>
        </tr>
     </table>
-    <p id="result"></p>
+    <p id="result"> Đây là chỗ hiển thị kết quả </p>
 </form>
 <script>
     function checkMonth() {
-        let month = document.getElementById('month').value;
+        let month = +document.getElementById('month').value;
 
+        switch (month) {
+            case 1:
+            case 3:
+            case 5:
+            case 7:
+            case 10:
+            case 12:
+
+                document.getElementById('result').innerHTML = "Tháng:" + month + " có 31 ngày"
+                break;
+            case 4:
+            case 6:
+            case 8:
+            case 9:
+            case 11:
+                document.getElementById('result').innerHTML = "Tháng:" + month + " có 30 ngày"
+                break;
+            case 2:
+                document.getElementById('result').innerHTML = "Tháng:" + month + " có 28,29 ngày"
+                break;
+
+            default:
+                document.getElementById("result").innerHTML = "Vui lòng nhập tháng hợp lệ (1 - 12)"
+                break;
+        }
     }
 </script>
 </body>
