--- a/Module_1/Lesson_9/Bai_tap_lesson_9/Baitap_may_tinh.html
+++ b/Module_1/Lesson_9/Bai_tap_lesson_9/Baitap_may_tinh.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Máy tính</title>
+    <link rel="stylesheet" href="CSS/may_tinh.css">
 </head>
 <body>
 <form>
@@ -38,19 +39,6 @@
         </tr>
     </table>
 </form>
-<script>
-
-    function inputNumber(value) {
-        document.getElementById("spreadsheet").value += value;
-    }
-    function inputAllowable(value) {
-        document.getElementById("spreadsheet").value += value;
-    }
-    function deLete() {
-        document.getElementById("spreadsheet").value = "";
-    }
-
-</script>
-
+<script src="JS/may_tinh.js"></script>
 </body>
 </html>
