--- a/Module_1/Lesson_10/Baitap_lesson_10/Baitap_For_2.html
+++ b/Module_1/Lesson_10/Baitap_lesson_10/Baitap_For_2.html
@@ -7,9 +7,11 @@
 <body>
 <script>
   let n = prompt(" Enter Number");
+  let sum = 0
   for (let i = 0; i <= n ; i++) {
-    document.write("num=" + n +i + "<br>")
+     sum += i;
   }
+  document.write("Tổng từ 1 - " + n + "là"+ sum + i + "<br>");
 </script>
 </body>
 </html>
