--- a/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_1.html
+++ b/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_1.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <script>
-    let x = 1, i;
-    for (i = 0; i < 3; i = i + 2) {
-        x = x + 1;
-    }
-    console.log(x);
-    console.log(i);
-
+<!--  In ra các số từ 1 đến 10 -->
+for (i = 1; i <= 10; i++) {
+  document.write(i + "<br>");
+}
 </script>
+
 </body>
 </html>
