--- a/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_2.html
+++ b/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_2.html
@@ -6,13 +6,10 @@
 </head>
 <body>
 <script>
-    let x = 1, i;
-    for (i = 0; i < 3; i = i + 2) {
-        x = x + 1;
-    }
-    console.log(x);
-    console.log(i);
-
+<!-- In ra các số chẵn từ 2 đến 20 -->
+for (i = 2 ; i < 20; i=i+2) {
+    document.write(i + "<br>");
+}
 </script>
 </body>
 </html>
