--- a/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_6.html
+++ b/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_6.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <script>
-    let x = 1, i;
-    for (i = 0; i < 3; i = i + 2) {
-        x = x + 1;
-    }
-    console.log(x);
-    console.log(i);
-
+<!--    Đếm ngược từ 10 về 1 -->
+for (i = 10; i>=1 ; i=i-1) {
+    document.write(i + "<br>");
+}
 </script>
+
 </body>
 </html>
