--- a/Module_1/Lesson_11/Baitap_bang_cuu_chuong.html
+++ b/Module_1/Lesson_11/Baitap_bang_cuu_chuong.html
@@ -5,12 +5,25 @@
     <title>Title</title>
 </head>
 <body>
+
 <script>
-  let sout;
-  sout = "<table border='1' width='300' cellspacing='0' cellpadding='3'>"
-  for (i = 1; i <= 9; i++) {
-    sout = sout + "<tr>";
-  }
+    const body = document.body;
+    const table = document.createElement('table');
+    table.style.borderCollapse = 'collapse';
+
+    for (let i = 1; i <= 9; i++) {
+        const row = document.createElement('tr');
+        for (let x = 1; x <= 9; x++) {
+            const cell = document.createElement('td');
+            cell.textContent = `${x} x ${i} = ${x * i}`;
+            cell.style.border = '1px solid black';
+            cell.style.padding = '5px';
+            row.appendChild(cell);
+        }
+        table.appendChild(row);
+    }
+
+    body.appendChild(table);
 </script>
 
 </body>
