--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    var x = [1,3,5,7];
+    x[0] = x[x.length-2];
+    console.log(x);
 
+</script>
 </body>
 </html>
