--- a/Module_1/Lesson_11/Baitap_cau_truc_lap_2/Baitap_3.html
+++ b/Module_1/Lesson_11/Baitap_cau_truc_lap_2/Baitap_3.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<!--In tam giác vuông.-->
 <script>
     for (i=1; i<=5 ;i++){
         for(j=1; j<=i; j++){
@@ -20,7 +19,7 @@
         document.write("<br>");
     } document.write("<br><br>");
 
-    //In hình chữ nhật
+    // hình chữ nhật
     for (a=1;a<=5 ;a++){
         for (b=10; 0<=b; b--) {
             if (a === 5 || a === 1 || b === 10 || b === 0) {
