--- a/Module_1/Baitap_lam_them/Mang/Bai_2.html
+++ b/Module_1/Baitap_lam_them/Mang/Bai_2.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<!--Truy xuất phần tử-->
 <script>
-
+    let colors = ["red", "green", "blue", "yellow"];
+    document.write(colors[0]+ "<br>" + colors[3]);
 </script>
 </body>
 </html>
