--- a/Module_1/Baitap_lam_them/Mang/Bai_3.html
+++ b/Module_1/Baitap_lam_them/Mang/Bai_3.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<!--Đếm số lượng phần tử-->
 <script>
-
+    let fruits = ["apple", "banana", "orange", "kiwi"];
+    document.write(fruits.length);
 </script>
 </body>
 </html>
