--- a/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_11.html
+++ b/Module_1/Baitap_lam_them/Cau_truc_lap/Bai_11.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <script>
-
+    for (let i = 1; i <= 9; i++) {
+        for (let x = 1; x <= 9; x++) {
+            document.write(`${i} x ${x} = ${i * x}` + "<br>");
+        }
+    }
 </script>
 </body>
 </html>
