--- a/Module_1/Lesson _12/TH_Lesson_12/TH_Bai_2.html
+++ b/Module_1/Lesson _12/TH_Lesson_12/TH_Bai_2.html
@@ -6,9 +6,20 @@
 </head>
 <body>
 <script>
-    const numbers = [-3,5,1,3,2,10];
+    // const numbers = [-3,5,1,3,2,10];
     // numbers.reverse();
     // console.log(numbers);
+    let x = [-3, 5, 1, 3, 2, 10];
+    let first = 0;
+    let last = x.length - 1;
+    while (first < last) {
+        let b = x[first];
+        x[first] = x[last];
+        x[last] = b;
+        first++;
+        last--;
+    }
+    document.write(x);
 </script>
 
 </body>
