--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <script>
-    var x = [1,3,5,7];
-    x[0] = x[x.length-2];
-    console.log(x);
-
+    let sum =0;
+    for ( let i=1 ; i <= 5 ; i++ ) {
+        debugger
+        sum+= i;
+    } console.log(sum);
 </script>
 </body>
 </html>
