--- a/Module_1/Lesson_11/Baitap_Tong_N.html
+++ b/Module_1/Lesson_11/Baitap_Tong_N.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let number = parseInt(prompt("Enter numbers: "));
+    let number = parseInt(prompt("Enter number: "));
     let sum = 0
     for(let i = 1; i <= number; i++){
         sum += i
