--- a/Module_1/Bai_tap_cuoi_Module_1/Bai_2/Bai_2.html
+++ b/Module_1/Bai_tap_cuoi_Module_1/Bai_2/Bai_2.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>In Tam Giác #</title>
+    <title>Title</title>
 </head>
 <body>
 
-<script>
-
-</script>
 </body>
 </html>
