--- a/Module_1/Bai_tap_cuoi_Module_1/Bai_3/Bai_3.html
+++ b/Module_1/Bai_tap_cuoi_Module_1/Bai_3/Bai_3.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Kiểm tra mảng tăng dần</title>
+    <meta charset="UTF-8">
+    <title>Kiểm tra mảng giảm dần</title>
 </head>
 <body>
 
-<h2> Kiểm tra 1 mảng tăng dần </h2>
+<h2> Kiểm tra 1 mảng giảm dần </h2>
 <br>
-<p> Nhập 1 dãy số có phải là mảng tăng dần hay không.  </p>
+<p> Nhập 1 dãy số có phải là mảng giảm dần hay không.  </p>
 <input type="text" id="inputArray" placeholder="Nhập dãy số">
 <button onclick="testArrayAscending()">Kiểm tra</button>
 <p id="result">Hiển thị kết quả!!</p>
+<script src="my3.js"></script>
 
-<script src="my.js"></script>
 </body>
 </html>
