--- a/Module_1/Bai_tap_cuoi_Module_1/Bai_4/Bai_4.html
+++ b/Module_1/Bai_tap_cuoi_Module_1/Bai_4/Bai_4.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kiểm tra loại tam giác</title>
+    <title>Kiểm tra và rút gọn phân số</title>
 </head>
 <body>
-<script src="my2.js"></script>
+<script src="my4.js"></script>
 </body>
 </html>
