--- a/Module_1/Case_study_Quan_ly_SV/index.html
+++ b/Module_1/Case_study_Quan_ly_SV/index.html
@@ -13,23 +13,23 @@
         <hr>
         <h2> Thông Tin Sinh Viên</h2>
         <hr>
-        <input type="text" id="id" placeholder="ID" />
-        <input type="text" id="name" placeholder="Họ Tên" />
+        <input type="text" id="id" placeholder="ID"/>
+        <input type="text" id="name" placeholder="Họ Tên"/>
         <input type="text" id="date" placeholder="Ngày sinh"/>
         <input type="text" id="gender" placeholder="Giới tính"/>
         <input type="text" id="className" placeholder="Lớp"/>
-        <input type="text" id="image" placeholder="Ảnh"/>
+        <input type="file" id="image" accept="image/*">
         <button type="button" onclick="addStudent()">Thêm Học Viên</button>
 
         <thead>
         <h2 class="student-list-title">DANH SÁCH SINH VIÊN</h2>
         <tr>
-            <th> ID </th>
-            <th> Họ Tên </th>
-            <th> Ngày sinh </th>
-            <th> Giới tính </th>
-            <th> Lớp </th>
-            <th> Ảnh </th>
+            <th> ID</th>
+            <th> Họ Tên</th>
+            <th> Ngày sinh</th>
+            <th> Giới tính</th>
+            <th> Lớp</th>
+            <th> Ảnh</th>
             <th colspan="2">Chức năng</th>
 
         </tr>
