--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <script>
-    let x = 1, i;
-    for (i = 0; i < 3; i = i + 2) {
-        x = x + 1;
+    var x = 5;
+    if(x++ < 6) {
+        x++;
     }
-    console.log(x);
-    console.log(i);
-
+    document.write(x);
 </script>
 </body>
 </html>
